add intervalles & Métronome tools

--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-hello world
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ear Training</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            padding: 1rem;
+        }
+    </style>
+    </head>
+    <body>
+        <h1>Music tools</h1>
+        <ul>
+            <li><a href="https://zepmanbc.github.io/intervalles/">Intervalles</a></li>
+            <li><a href="https://zepmanbc.github.io/bpm-pulse/?bpm=120&beats=4">Métronome</a></li>
+        </ul>        
+    </body>
+</html>
