--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <ul>
             <li><a href="https://zepmanbc.github.io/intervalles/">Intervalles</a></li>
             <li><a href="https://zepmanbc.github.io/bpm-pulse/?bpm=120&beats=4">Métronome</a></li>
+            <li><a href="https://zepmanbc.github.io/music-grid/">Grid maker</a></li>
         </ul>        
     </body>
 </html>
